[gd_scene load_steps=9 format=3 uid="uid://dfm25r0ju5214"]

[ext_resource type="Script" uid="uid://bukqqxqd0n5dt" path="res://ui/map_ui/status_screen/status_screen.gd" id="1_2pcwt"]
[ext_resource type="PackedScene" uid="uid://b7h3kn7yes57v" path="res://backgrounds/scrolling_image/scrolling_image.tscn" id="1_fu38b"]
[ext_resource type="Texture2D" uid="uid://cpy5pea1o30t6" path="res://ui/theme/portrait.png" id="2_hydo1"]
[ext_resource type="PackedScene" uid="uid://jyd6v7dptm76" path="res://ui/map_ui/status_screen/statistics/statistics.tscn" id="3_a0hin"]
[ext_resource type="Script" uid="uid://ct4a5uumlk5g3" path="res://ui/help_popup/help_container.gd" id="4_g30x5"]
[ext_resource type="Script" uid="uid://crilugtsdxom2" path="res://portraits/portrait.gd" id="5_a0q8g"]
[ext_resource type="PackedScene" uid="uid://bv0fufaguhv7n" path="res://ui/map_ui/status_screen/item_screen/item_screen.tscn" id="5_ogdan"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vmos"]
bg_color = Color(0.12549, 0.235294, 0.345098, 0.498039)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
anti_aliasing = false

[node name="StatusScreen" type="ReferenceRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_2pcwt")

[node name="ScrollingImage" parent="." instance=ExtResource("1_fu38b")]
visible = false
layout_mode = 1
mouse_filter = 1

[node name="MenuScreen" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Constant" type="VBoxContainer" parent="MenuScreen"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="PortraitBackgroundContainer" type="MarginContainer" parent="MenuScreen/Constant"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6

[node name="PortraitBackground" type="TextureRect" parent="MenuScreen/Constant/PortraitBackgroundContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_hydo1")

[node name="UnitDescription" type="BoxContainer" parent="MenuScreen/Constant/PortraitBackgroundContainer/PortraitBackground"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 30.0
offset_top = 76.0
offset_right = 86.0
offset_bottom = 92.0
focus_neighbor_bottom = NodePath("../../../Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/ClassDescription")
script = ExtResource("4_g30x5")
help_description = "PLACEHOLDER"

[node name="UnitName" type="Label" parent="MenuScreen/Constant/PortraitBackgroundContainer/PortraitBackground/UnitDescription"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="MenuScreen/Constant/PortraitBackgroundContainer/PortraitBackground"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 86.0
offset_bottom = 76.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="MenuScreen/Constant/PortraitBackgroundContainer/PortraitBackground/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(80, 72)
render_target_update_mode = 4

[node name="Portrait" type="Sprite2D" parent="MenuScreen/Constant/PortraitBackgroundContainer/PortraitBackground/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(0, 1)
centered = false
script = ExtResource("5_a0q8g")

[node name="Container" type="ReferenceRect" parent="MenuScreen/Constant"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="HighStatsBackground" type="PanelContainer" parent="MenuScreen/Constant/Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 177.0
grow_horizontal = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_8vmos")

[node name="HighStatsMargins" type="MarginContainer" parent="MenuScreen/Constant/Container/HighStatsBackground"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="HighStatsContainer" type="VBoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="ClassDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../../../../PortraitBackgroundContainer/PortraitBackground/UnitDescription")
focus_neighbor_bottom = NodePath("../LevelContainer")
script = ExtResource("4_g30x5")
help_description = "PLACEHOLDER"

[node name="ClassName" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/ClassDescription"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Cavalier"

[node name="LevelContainer" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../ClassDescription")
focus_neighbor_bottom = NodePath("../EXPContainer/EXPDescription")
script = ExtResource("4_g30x5")
help_description = "Determines a unit's Stats and whether they can promote.
The first number is the current level, the second is the maximum level."

[node name="LevelLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/LevelContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "Level"

[node name="CurrentLevel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/LevelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "1"

[node name="Separator" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/LevelContainer"]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "/"

[node name="MaxLevel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/LevelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "1"

[node name="EXPContainer" type="HBoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2

[node name="EXPDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/EXPContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../LevelContainer")
focus_neighbor_right = NodePath("../EXPStatHelp")
focus_neighbor_bottom = NodePath("../../HitPointsContainer/HitPointsDescription")
script = ExtResource("4_g30x5")
help_description = "Experience. Used to bring the unit's level up. The value is the percentage to the next level."

[node name="EXPLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/EXPContainer/EXPDescription"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "EXP"

[node name="EXPStatHelp" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/EXPContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_neighbor_left = NodePath("../EXPDescription")
focus_neighbor_top = NodePath("../../LevelContainer")
focus_neighbor_bottom = NodePath("../../HitPointsContainer/HitPointsStatHelp")
theme_override_constants/separation = 0
script = ExtResource("4_g30x5")

[node name="EXPPercent" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/EXPContainer/EXPStatHelp"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "99"

[node name="PercentLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/EXPContainer/EXPStatHelp"]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "%"

[node name="HitPointsContainer" type="HBoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2

[node name="HitPointsDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitPointsContainer"]
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../../EXPContainer/EXPDescription")
focus_neighbor_right = NodePath("../HitPointsStatHelp")
focus_neighbor_bottom = NodePath("../../AttackContainer/AttackLabelDescription")
script = ExtResource("4_g30x5")
help_description = "When this value reaches 0, the unit dies.
The first value is the current value, the second is the maximum."

[node name="HPLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitPointsContainer/HitPointsDescription"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "Hit Points"

[node name="HitPointsStatHelp" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitPointsContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../HitPointsDescription")
focus_neighbor_top = NodePath("../../EXPContainer/EXPStatHelp")
focus_neighbor_bottom = NodePath("../../AttackContainer/AttackDescription")
script = ExtResource("4_g30x5")

[node name="Current" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitPointsContainer/HitPointsStatHelp"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "21"

[node name="Separator" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitPointsContainer/HitPointsStatHelp"]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "/"

[node name="MaxHitPoints" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitPointsContainer/HitPointsStatHelp"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "21"

[node name="AttackContainer" type="HBoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2

[node name="AttackLabelDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/AttackContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../../HitPointsContainer/HitPointsDescription")
focus_neighbor_right = NodePath("../AttackDescription")
focus_neighbor_bottom = NodePath("../../ASContainer/ASLabelDescription")
script = ExtResource("4_g30x5")
help_description = "The unit's current attack."

[node name="AttackLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/AttackContainer/AttackLabelDescription"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "Attack"

[node name="AttackDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/AttackContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../AttackLabelDescription")
focus_neighbor_top = NodePath("../../HitPointsContainer/HitPointsStatHelp")
focus_neighbor_bottom = NodePath("../../ASContainer/ASDescription")
script = ExtResource("4_g30x5")

[node name="AttackValue" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/AttackContainer/AttackDescription"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "21"

[node name="ASContainer" type="HBoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2

[node name="ASLabelDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/ASContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../../AttackContainer/AttackLabelDescription")
focus_neighbor_right = NodePath("../ASDescription")
focus_neighbor_bottom = NodePath("../../HitContainer/HitLabelDescription")
script = ExtResource("4_g30x5")
help_description = "The unit's speed after factoring in weapon weight."

[node name="ASLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/ASContainer/ASLabelDescription"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "Attack Speed"

[node name="ASDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/ASContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../ASLabelDescription")
focus_neighbor_top = NodePath("../../AttackContainer/AttackDescription")
focus_neighbor_bottom = NodePath("../../HitContainer/HitDescription")
script = ExtResource("4_g30x5")

[node name="ASValue" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/ASContainer/ASDescription"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "21"

[node name="HitContainer" type="HBoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2

[node name="HitLabelDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../../ASContainer/ASLabelDescription")
focus_neighbor_right = NodePath("../HitDescription")
focus_neighbor_bottom = NodePath("../../AvoidContainer/AvoidLabelDescription")
script = ExtResource("4_g30x5")
help_description = "The unit's current hit rate when attacking."

[node name="HitLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitContainer/HitLabelDescription"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "Hit"

[node name="HitDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../HitLabelDescription")
focus_neighbor_top = NodePath("../../ASContainer/ASDescription")
focus_neighbor_bottom = NodePath("../../AvoidContainer/AvoidDescription")
script = ExtResource("4_g30x5")

[node name="HitValue" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/HitContainer/HitDescription"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "21"

[node name="AvoidContainer" type="HBoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2

[node name="AvoidLabelDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/AvoidContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../../HitContainer/HitLabelDescription")
focus_neighbor_right = NodePath("../AvoidDescription")
focus_neighbor_bottom = NodePath("../../CritContainer/CritLabelDescription")
script = ExtResource("4_g30x5")
help_description = "The unit's current avoid rate. Decreases attacker's hit rate."

[node name="AvoidLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/AvoidContainer/AvoidLabelDescription"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "Avoid"

[node name="AvoidDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/AvoidContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../AvoidLabelDescription")
focus_neighbor_top = NodePath("../../HitContainer/HitDescription")
focus_neighbor_bottom = NodePath("../../CritContainer/CritDescription")
script = ExtResource("4_g30x5")

[node name="AvoidValue" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/AvoidContainer/AvoidDescription"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "21"

[node name="CritContainer" type="HBoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2

[node name="CritLabelDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/CritContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../../AvoidContainer/AvoidLabelDescription")
focus_neighbor_right = NodePath("../CritDescription")
focus_neighbor_bottom = NodePath("../../CriticalAvoidContainer/CriticalAvoidLabelDescription")
script = ExtResource("4_g30x5")
help_description = "Chance to get a critical hit."

[node name="CritLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/CritContainer/CritLabelDescription"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "Critical Hit"

[node name="CritDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/CritContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../CritLabelDescription")
focus_neighbor_top = NodePath("../../AvoidContainer/AvoidDescription")
focus_neighbor_bottom = NodePath("../../CriticalAvoidContainer/CriticalAvoidDescription")
script = ExtResource("4_g30x5")

[node name="CritValue" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/CritContainer/CritDescription"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "21"

[node name="CriticalAvoidContainer" type="HBoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2

[node name="CriticalAvoidLabelDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/CriticalAvoidContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../../CritContainer/CritLabelDescription")
focus_neighbor_right = NodePath("../CriticalAvoidDescription")
focus_neighbor_bottom = NodePath("../../RangeContainer")
script = ExtResource("4_g30x5")
help_description = "Critical avoidRate: decreases enemy's critical hit chance.
If the resulting rate is below 5%, a critical can not occur."

[node name="CriticalAvoidLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/CriticalAvoidContainer/CriticalAvoidLabelDescription"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "Critical avoid"

[node name="CriticalAvoidDescription" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/CriticalAvoidContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../CriticalAvoidLabelDescription")
focus_neighbor_top = NodePath("../../CritContainer/CritDescription")
focus_neighbor_bottom = NodePath("../../RangeContainer")
script = ExtResource("4_g30x5")

[node name="CriticalAvoidValue" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/CriticalAvoidContainer/CriticalAvoidDescription"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "21"

[node name="RangeContainer" type="BoxContainer" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../CriticalAvoidContainer/CriticalAvoidLabelDescription")
script = ExtResource("4_g30x5")
help_description = "The current range the unit can attack from."

[node name="RangeLabel" type="Label" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/RangeContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"YellowLabel"
text = "Range"

[node name="RangeValue" type="RichTextLabel" parent="MenuScreen/Constant/Container/HighStatsBackground/HighStatsMargins/HighStatsContainer/RangeContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "1-2"
fit_content = true
autowrap_mode = 0

[node name="MenuTabs" type="TabContainer" parent="MenuScreen"]
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0

[node name="Statistics" parent="MenuScreen/MenuTabs" instance=ExtResource("3_a0hin")]
layout_mode = 2
metadata/_tab_index = 0

[node name="Items" parent="MenuScreen/MenuTabs" instance=ExtResource("5_ogdan")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[connection signal="tab_changed" from="MenuScreen/MenuTabs" to="." method="_on_menu_tabs_tab_changed"]
